# game-of-life

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  wrangler.toml
examples/: fig8
script/: dbconsole  server
src/: db.rs  game.rs  lib.rs  main.rs  render.rs
