[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"
authors = ["Rob Herley <robherley13@gmail.com>"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
quick-xml = "0.36.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
resvg = "0.43.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zstd = "0.13.2"
