[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"
authors = ["Rob Herley <robherley13@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
http = { version = "1.1.0" }
quick-xml = "0.36.1"
resvg = "0.43.0"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
worker = { version = "0.3.4", features = ["http", "axum"] }
worker-macros = { version = "0.3.4", features = ["http"] }
